--- a/src/plugins/css/preflight.css
+++ b/src/plugins/css/preflight.css
@@ -118,6 +118,13 @@ img {
   border-style: solid;
 }
 
+/*
+ * Ensure horizontal rulers are visible by default
+ */
+hr {
+  border-width: 1px;
+}
+
 textarea {
   resize: vertical;
 }
